# ROS2agent0417

./: .cursorignore  .env  Complete_process_test.md  IQ.md  Interview.md  LearningLog.md  README.md  environment.yml  nav_ws运行文档.md  run_agent_ros2.sh  run_nav_agent_ros2.sh  show_last_session.sh
cursor/: rosa-tools-guardrails.mdc
install/: local_setup.sh  setup.sh
install/nav_agent_ros2/share/nav_agent_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build  latest_version-check
nav_ws/: build_nav.sh  start_sim.sh
nav_ws/install/: local_setup.sh  setup.sh
nav_ws/log/: latest_build  latest_list
nav_ws/logs/: rosa_session.jsonl  rosa_session.jsonl.20260430_163217.bak  rosa_session.jsonl.20260430_163353.bak  rosa_session.jsonl.20260430_163517.bak  rosa_session.jsonl.20260430_172002.bak  rosa_tools.jsonl  rosa_tools.jsonl.20260430_163217.bak  rosa_tools.jsonl.20260430_163517.bak  rosa_tools.jsonl.20260430_172002.bak  rosa_trace.jsonl
nav_ws/src/my_astar_planner/: CMakeLists.txt  package.xml  plugins.xml
nav_ws/src/my_astar_planner/include/my_astar_planner/: my_astar_planner.hpp
nav_ws/src/my_astar_planner/src/: my_astar_planner.cpp
nav_ws/src/nav_agent_ros2/: package.xml  setup.cfg  setup.py
nav_ws/src/nav_agent_ros2/launch/: agent.launch.py
nav_ws/src/nav_agent_ros2/nav_agent_ros2/: __init__.py  help.py  llm.py  nav_agent.py  prompts.py
nav_ws/src/nav_agent_ros2/resource/: nav_agent_ros2
nav_ws/src/robot_patrol/: setup.py
nav_ws/src/robot_patrol/config/: my_nav_params.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/turtle_agent_ros2/: package.xml  setup.cfg  setup.py
src/rosa/: __init__.py  prompts.py  rosa.py  tool_trace_logger.py
src/rosa/tools/: __init__.py  ros2_docs.py
src/turtle_agent/scripts/: llm.py
tests/test_rosa/tools/: test_ros2_docs.py
(+101 files in other folders)
